# kevinal

./: .gitignore  README.md
.claude/commands/: release.md
.github/workflows/: ci.yml  release.yml
src/: DEBUG_REPORT.md  index.html  package-lock.json  package.json  tsconfig.json
src/scripts/: sync-version.mjs
src/src/: App.css  App.tsx  main.tsx  types.ts
src/src-tauri/: Cargo.toml  tauri.conf.json
src/src-tauri/capabilities/: default.json
src/src-tauri/src/: commands.rs  lib.rs  main.rs  pty_manager.rs  state.rs  window.rs
src/src/components/: DockArea.tsx  NewTerminalButton.tsx  StatusBar.tsx  TerminalInstance.tsx  TerminalTabs.tsx  TitleBar.tsx  Welcome.tsx
src/src/hooks/: useTerminal.ts
src/src/lib/: tauri.ts
src/src/store/: terminalStore.ts
