[package]
name = "kevinal"
version = "0.1.0"
description = "Multi-terminal app with docking layout"
authors = ["you"]
edition = "2021"

[lib]
name = "kevinal_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
base64 = "0.22"
